@@ -7,7 +7,6 @@ import static com.sequenceiq.cloudbreak.common.network.NetworkConstants.VPC_ID;
 import static com.sequenceiq.common.api.type.CommonStatus.CREATED;
 import static com.sequenceiq.common.api.type.CommonStatus.FAILED;
 import static com.sequenceiq.common.api.type.InstanceGroupType.GATEWAY;
-import static com.sequenceiq.common.api.type.ResourceType.AWS_INSTANCE;
 import static com.sequenceiq.common.api.type.ResourceType.ELASTIC_LOAD_BALANCER;
 import static java.util.Collections.emptyMap;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -23,6 +22,7 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -37,12 +37,6 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import com.amazonaws.services.cloudformation.model.DescribeStacksRequest;
-import com.amazonaws.services.cloudformation.model.ListStackResourcesResult;
-import com.amazonaws.services.cloudformation.model.ResourceStatus;
-import com.amazonaws.services.cloudformation.model.StackResourceSummary;
-import com.amazonaws.services.cloudformation.waiters.AmazonCloudFormationWaiters;
-import com.amazonaws.waiters.Waiter;
 import com.sequenceiq.cloudbreak.cloud.aws.AwsCloudFormationClient;
 import com.sequenceiq.cloudbreak.cloud.aws.AwsStackRequestHelper;
 import com.sequenceiq.cloudbreak.cloud.aws.CloudFormationStackUtil;
@@ -57,7 +51,6 @@ import com.sequenceiq.cloudbreak.cloud.aws.common.loadbalancer.AwsLoadBalancerSc
 import com.sequenceiq.cloudbreak.cloud.aws.common.loadbalancer.AwsTargetGroup;
 import com.sequenceiq.cloudbreak.cloud.aws.common.resource.ModelContext;
 import com.sequenceiq.cloudbreak.cloud.aws.common.util.AwsPageCollector;
-import com.sequenceiq.cloudbreak.cloud.aws.common.view.AwsNetworkView;
 import com.sequenceiq.cloudbreak.cloud.context.AuthenticatedContext;
 import com.sequenceiq.cloudbreak.cloud.context.CloudContext;
 import com.sequenceiq.cloudbreak.cloud.exception.CloudConnectorException;
@@ -76,6 +69,11 @@ import com.sequenceiq.common.api.type.LoadBalancerType;
 import com.sequenceiq.common.api.type.LoadBalancerTypeAttribute;
 import com.sequenceiq.common.api.type.OutboundInternetTraffic;
 
+import software.amazon.awssdk.services.cloudformation.model.ListStackResourcesResponse;
+import software.amazon.awssdk.services.cloudformation.model.ResourceStatus;
+import software.amazon.awssdk.services.cloudformation.model.StackResourceSummary;
+import software.amazon.awssdk.services.cloudformation.waiters.CloudFormationWaiter;
+
 @ExtendWith(MockitoExtension.class)
 class AwsLoadBalancerLaunchServiceTest {
 
@@ -88,8 +86,6 @@ class AwsLoadBalancerLaunchServiceTest {
     private static final int PORT = 443;
 
     private static final String INSTANCE_NAME = "instance";
-
-    private static final String INSTANCE_ID = "instance-id";
 
     private static final String STACK_NAME = "stack";
 
@@ -119,10 +115,7 @@ class AwsLoadBalancerLaunchServiceTest {
     private AwsStackRequestHelper awsStackRequestHelper;
 
     @Mock
-    private Waiter<DescribeStacksRequest> updateWaiter;
-
-    @Mock
-    private AmazonCloudFormationWaiters waiters;
+    private CloudFormationWaiter waiters;
 
     @Mock
     private AmazonCloudFormationClient cfClient;
@@ -143,9 +136,6 @@ class AwsLoadBalancerLaunchServiceTest {
     private CloudStack cloudStack;
 
     @Mock
-    private ListStackResourcesResult result;
-
-    @Mock
     private AwsModelService awsModelService;
 
     @Mock
@@ -159,19 +149,16 @@ class AwsLoadBalancerLaunchServiceTest {
 
     @Test
     void testUpdateCloudformationWithPrivateLoadBalancer() {
-        List<CloudResource> instances = createInstances();
-        AwsNetworkView awsNetworkView = createNetworkView(PRIVATE_ID_1, null);
         Network network = createNetwork(PRIVATE_ID_1, null);
         Set<LoadBalancerType> types = Set.of(LoadBalancerType.PRIVATE);
         List<StackResourceSummary> firstUpdateSummaries = createFirstUpdateSummaries(types);
         List<StackResourceSummary> secondUpdateSummaries = createFullSummaries(types);
-
-        setupMocksForUpdate(awsNetworkView, network, instances, Set.of(LoadBalancerType.PRIVATE));
-        when(result.getStackResourceSummaries())
-                .thenReturn(List.of())
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(secondUpdateSummaries);
+        when(cfClient.listStackResources(any()))
+                .thenReturn(createListStackResourcesResponse(Collections.emptyList()))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(secondUpdateSummaries));
+        setupMocksForUpdate(network, Set.of(LoadBalancerType.PRIVATE));
         when(ac.getCloudContext()).thenReturn(cloudContext);
         when(cloudContext.getLocation()).thenReturn(location);
         when(location.getAvailabilityZone()).thenReturn(availabilityZone("az1"));
@@ -179,26 +166,26 @@ class AwsLoadBalancerLaunchServiceTest {
         List<CloudResourceStatus> statuses = underTest.updateCloudformationWithLoadBalancers(ac, cloudStack, null, null);
 
         verify(cfClient, times(2)).updateStack(any());
-        verify(result, times(4)).getStackResourceSummaries();
         assertEquals(LoadBalancerTypeAttribute.PRIVATE,
                 statuses.get(0).getCloudResource().getParameter(CloudResource.ATTRIBUTES, LoadBalancerTypeAttribute.class));
     }
 
+    private ListStackResourcesResponse createListStackResourcesResponse(List<StackResourceSummary> resourceSummaries) {
+        return ListStackResourcesResponse.builder().stackResourceSummaries(resourceSummaries).build();
+    }
+
     @Test
     void testUpdateCloudformationWithPublicLoadBalancerNoEndpointGateway() {
-        List<CloudResource> instances = createInstances();
-        AwsNetworkView awsNetworkView = createNetworkView(PUBLIC_ID_1, null);
         Network network = createNetwork(PUBLIC_ID_1, null);
         Set<LoadBalancerType> types = Set.of(LoadBalancerType.PUBLIC);
         List<StackResourceSummary> firstUpdateSummaries = createFirstUpdateSummaries(types);
         List<StackResourceSummary> secondUpdateSummaries = createFullSummaries(types);
-
-        setupMocksForUpdate(awsNetworkView, network, instances, Set.of(LoadBalancerType.PUBLIC));
-        when(result.getStackResourceSummaries())
-                .thenReturn(List.of())
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(secondUpdateSummaries);
+        when(cfClient.listStackResources(any()))
+                .thenReturn(createListStackResourcesResponse(Collections.emptyList()))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(secondUpdateSummaries));
+        setupMocksForUpdate(network, Set.of(LoadBalancerType.PUBLIC));
         when(ac.getCloudContext()).thenReturn(cloudContext);
         when(cloudContext.getLocation()).thenReturn(location);
         when(location.getAvailabilityZone()).thenReturn(availabilityZone("az1"));
@@ -206,26 +193,22 @@ class AwsLoadBalancerLaunchServiceTest {
         List<CloudResourceStatus> statuses = underTest.updateCloudformationWithLoadBalancers(ac, cloudStack, null, null);
 
         verify(cfClient, times(2)).updateStack(any());
-        verify(result, times(4)).getStackResourceSummaries();
         assertEquals(LoadBalancerTypeAttribute.PUBLIC,
                 statuses.get(0).getCloudResource().getParameter(CloudResource.ATTRIBUTES, LoadBalancerTypeAttribute.class));
     }
 
     @Test
     void testUpdateCloudformationWithEndpointGatewayAndPrivateSubnet() {
-        List<CloudResource> instances = createInstances();
-        AwsNetworkView awsNetworkView = createNetworkView(PRIVATE_ID_1, PUBLIC_ID_1);
         Network network = createNetwork(PRIVATE_ID_1, PUBLIC_ID_1);
         Set<LoadBalancerType> types = Set.of(LoadBalancerType.PUBLIC, LoadBalancerType.PRIVATE);
         List<StackResourceSummary> firstUpdateSummaries = createFirstUpdateSummaries(types);
         List<StackResourceSummary> secondUpdateSummaries = createFullSummaries(types);
-
-        setupMocksForUpdate(awsNetworkView, network, instances, Set.of(LoadBalancerType.PUBLIC, LoadBalancerType.PRIVATE));
-        when(result.getStackResourceSummaries())
-                .thenReturn(List.of())
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(secondUpdateSummaries);
+        when(cfClient.listStackResources(any()))
+                .thenReturn(createListStackResourcesResponse(Collections.emptyList()))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(secondUpdateSummaries));
+        setupMocksForUpdate(network, Set.of(LoadBalancerType.PUBLIC, LoadBalancerType.PRIVATE));
         when(ac.getCloudContext()).thenReturn(cloudContext);
         when(cloudContext.getLocation()).thenReturn(location);
         when(location.getAvailabilityZone()).thenReturn(availabilityZone("az1"));
@@ -233,7 +216,6 @@ class AwsLoadBalancerLaunchServiceTest {
         List<CloudResourceStatus> statuses = underTest.updateCloudformationWithLoadBalancers(ac, cloudStack, null, null);
 
         verify(cfClient, times(2)).updateStack(any());
-        verify(result, times(5)).getStackResourceSummaries();
         Set<LoadBalancerTypeAttribute> loadBalancerTypes = statuses.stream()
                 .map(CloudResourceStatus::getCloudResource)
                 .map(r -> r.getParameter(CloudResource.ATTRIBUTES, LoadBalancerTypeAttribute.class))
@@ -243,8 +225,6 @@ class AwsLoadBalancerLaunchServiceTest {
 
     @Test
     void testUpdateCloudformationWithLoadBalancerMissingTargetGroup() {
-        List<CloudResource> instances = createInstances();
-        AwsNetworkView awsNetworkView = createNetworkView(PRIVATE_ID_1, null);
         Network network = createNetwork(PRIVATE_ID_1, null);
         String expectedError = String.format("Could not create load balancer listeners: target group %s not found.",
                 AwsTargetGroup.getTargetGroupName(PORT, AwsLoadBalancerScheme.INTERNAL));
@@ -252,56 +232,47 @@ class AwsLoadBalancerLaunchServiceTest {
         List<StackResourceSummary> firstUpdateSummaries = createFirstUpdateSummaries(types);
         firstUpdateSummaries.remove(TG_INDEX);
         List<StackResourceSummary> secondUpdateSummaries = createFullSummaries(types);
-
-        setupMocksForUpdate(awsNetworkView, network, instances, types);
-        when(result.getStackResourceSummaries())
-                .thenReturn(List.of())
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(secondUpdateSummaries);
-
+        when(cfClient.listStackResources(any()))
+                .thenReturn(createListStackResourcesResponse(Collections.emptyList()))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(secondUpdateSummaries));
+        setupMocksForUpdate(network, types);
         CloudConnectorException exception =
                 assertThrows(CloudConnectorException.class, () ->
                         underTest.updateCloudformationWithLoadBalancers(ac, cloudStack, null, null));
 
         verify(cfClient, times(1)).updateStack(any());
-        verify(result, times(2)).getStackResourceSummaries();
         assertEquals(expectedError, exception.getMessage());
     }
 
     @Test
     void testUpdateCloudformationWithLoadBalancerMissingTargetGroupArn() {
-        List<CloudResource> instances = createInstances();
-        AwsNetworkView awsNetworkView = createNetworkView(PRIVATE_ID_1, null);
         Network network = createNetwork(PRIVATE_ID_1, null);
         String expectedError = String.format("Could not create load balancer listeners: target group %s arn not found.",
                 AwsTargetGroup.getTargetGroupName(PORT, AwsLoadBalancerScheme.INTERNAL));
         Set<LoadBalancerType> types = Set.of(LoadBalancerType.PRIVATE);
         List<StackResourceSummary> firstUpdateSummaries = createFirstUpdateSummaries(types);
-        StackResourceSummary tgSummary = firstUpdateSummaries.get(TG_INDEX);
-        tgSummary.setPhysicalResourceId(null);
+        StackResourceSummary tgSummary = firstUpdateSummaries.get(TG_INDEX).toBuilder().physicalResourceId(null).build();
+        firstUpdateSummaries.remove(TG_INDEX);
+        firstUpdateSummaries.add(tgSummary);
         List<StackResourceSummary> secondUpdateSummaries = createFullSummaries(types);
-
-        setupMocksForUpdate(awsNetworkView, network, instances, types);
-        when(result.getStackResourceSummaries())
-                .thenReturn(List.of())
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(secondUpdateSummaries);
-
+        when(cfClient.listStackResources(any()))
+                .thenReturn(createListStackResourcesResponse(Collections.emptyList()))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(secondUpdateSummaries));
+        setupMocksForUpdate(network, types);
         CloudConnectorException exception =
                 assertThrows(CloudConnectorException.class, () ->
                         underTest.updateCloudformationWithLoadBalancers(ac, cloudStack, null, null));
 
         verify(cfClient, times(1)).updateStack(any());
-        verify(result, times(2)).getStackResourceSummaries();
         assertEquals(expectedError, exception.getMessage());
     }
 
     @Test
     void testUpdateCloudformationWithLoadBalancerMissingLoadBalancer() {
-        List<CloudResource> instances = createInstances();
-        AwsNetworkView awsNetworkView = createNetworkView(PRIVATE_ID_1, null);
         Network network = createNetwork(PRIVATE_ID_1, null);
         String expectedError = String.format("Could not create load balancer listeners: load balancer %s not found.",
                 AwsLoadBalancer.getLoadBalancerName(AwsLoadBalancerScheme.INTERNAL));
@@ -309,49 +280,43 @@ class AwsLoadBalancerLaunchServiceTest {
         List<StackResourceSummary> firstUpdateSummaries = createFirstUpdateSummaries(types);
         firstUpdateSummaries.remove(LB_INDEX);
         List<StackResourceSummary> secondUpdateSummaries = createFullSummaries(types);
-
-        setupMocksForUpdate(awsNetworkView, network, instances, types);
-        when(result.getStackResourceSummaries())
-                .thenReturn(List.of())
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(secondUpdateSummaries);
-
+        when(cfClient.listStackResources(any()))
+                .thenReturn(createListStackResourcesResponse(Collections.emptyList()))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(secondUpdateSummaries));
+        setupMocksForUpdate(network, types);
         CloudConnectorException exception =
                 assertThrows(CloudConnectorException.class, () ->
                         underTest.updateCloudformationWithLoadBalancers(ac, cloudStack, null, null));
 
         verify(cfClient, times(1)).updateStack(any());
-        verify(result, times(2)).getStackResourceSummaries();
         assertEquals(expectedError, exception.getMessage());
     }
 
     @Test
     void testUpdateCloudformationWithLoadBalancerMissingLoadBalancerArn() {
-        List<CloudResource> instances = createInstances();
-        AwsNetworkView awsNetworkView = createNetworkView(PRIVATE_ID_1, null);
         Network network = createNetwork(PRIVATE_ID_1, null);
         String expectedError = String.format("Could not create load balancer listeners: load balancer %s arn not found.",
                 AwsLoadBalancer.getLoadBalancerName(AwsLoadBalancerScheme.INTERNAL));
         Set<LoadBalancerType> types = Set.of(LoadBalancerType.PRIVATE);
         List<StackResourceSummary> firstUpdateSummaries = createFirstUpdateSummaries(types);
-        StackResourceSummary lbSummary = firstUpdateSummaries.get(LB_INDEX);
-        lbSummary.setPhysicalResourceId(null);
+        StackResourceSummary lbSummary = firstUpdateSummaries.get(LB_INDEX).toBuilder().physicalResourceId(null).build();
+        firstUpdateSummaries.remove(LB_INDEX);
+        firstUpdateSummaries.add(lbSummary);
         List<StackResourceSummary> secondUpdateSummaries = createFullSummaries(types);
-
-        setupMocksForUpdate(awsNetworkView, network, instances, types);
-        when(result.getStackResourceSummaries())
-                .thenReturn(List.of())
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(secondUpdateSummaries);
+        when(cfClient.listStackResources(any()))
+                .thenReturn(createListStackResourcesResponse(Collections.emptyList()))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(secondUpdateSummaries));
+        setupMocksForUpdate(network, types);
 
         CloudConnectorException exception =
                 assertThrows(CloudConnectorException.class, () ->
                         underTest.updateCloudformationWithLoadBalancers(ac, cloudStack, null, null));
 
         verify(cfClient, times(1)).updateStack(any());
-        verify(result, times(2)).getStackResourceSummaries();
         assertEquals(expectedError, exception.getMessage());
     }
 
@@ -360,9 +325,7 @@ class AwsLoadBalancerLaunchServiceTest {
         AwsLoadBalancer loadBalancer = new AwsLoadBalancer(AwsLoadBalancerScheme.INTERNAL);
         loadBalancer.getOrCreateListener(PORT, PORT);
 
-        when(result.getStackResourceSummaries()).thenReturn(createFullSummaries(Set.of(LoadBalancerType.PRIVATE)));
-
-        underTest.setLoadBalancerMetadata(List.of(loadBalancer), result);
+        underTest.setLoadBalancerMetadata(List.of(loadBalancer), createListStackResourcesResponse(createFullSummaries(Set.of(LoadBalancerType.PRIVATE))));
 
         assertEquals(LOAD_BALANCER_ARN, loadBalancer.getArn());
         AwsListener listener = loadBalancer.getListeners().iterator().next();
@@ -373,19 +336,16 @@ class AwsLoadBalancerLaunchServiceTest {
 
     @Test
     void testUpdateCloudformationSuccess() {
-        List<CloudResource> instances = createInstances();
-        AwsNetworkView awsNetworkView = createNetworkView(PRIVATE_ID_1, null);
         Network network = createNetwork(PRIVATE_ID_1, null);
         Set<LoadBalancerType> types = Set.of(LoadBalancerType.PRIVATE);
         List<StackResourceSummary> firstUpdateSummaries = createFirstUpdateSummaries(types);
         List<StackResourceSummary> secondUpdateSummaries = createFullSummaries(types);
-
-        setupMocksForUpdate(awsNetworkView, network, instances, types);
-        when(result.getStackResourceSummaries())
-                .thenReturn(List.of())
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(secondUpdateSummaries);
+        when(cfClient.listStackResources(any()))
+                .thenReturn(createListStackResourcesResponse(Collections.emptyList()))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(secondUpdateSummaries));
+        setupMocksForUpdate(network, types);
         when(ac.getCloudContext()).thenReturn(cloudContext);
         when(cloudContext.getLocation()).thenReturn(location);
         when(location.getAvailabilityZone()).thenReturn(availabilityZone("az1"));
@@ -402,20 +362,19 @@ class AwsLoadBalancerLaunchServiceTest {
 
     @Test
     void testUpdateCloudformationLoadBalancerCreateFailure() {
-        List<CloudResource> instances = createInstances();
-        AwsNetworkView awsNetworkView = createNetworkView(PRIVATE_ID_1, null);
         Network network = createNetwork(PRIVATE_ID_1, null);
         Set<LoadBalancerType> types = Set.of(LoadBalancerType.PRIVATE);
         List<StackResourceSummary> firstUpdateSummaries = createFirstUpdateSummaries(types);
         List<StackResourceSummary> secondUpdateSummaries = createFullSummaries(types);
-        secondUpdateSummaries.get(LB_INDEX).setResourceStatus(ResourceStatus.CREATE_FAILED);
-
-        setupMocksForUpdate(awsNetworkView, network, instances, types);
-        when(result.getStackResourceSummaries())
-                .thenReturn(List.of())
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(secondUpdateSummaries);
+        StackResourceSummary stackResourceSummary = secondUpdateSummaries.get(LB_INDEX).toBuilder().resourceStatus(ResourceStatus.CREATE_FAILED).build();
+        secondUpdateSummaries.remove(LB_INDEX);
+        secondUpdateSummaries.add(stackResourceSummary);
+        when(cfClient.listStackResources(any()))
+                .thenReturn(createListStackResourcesResponse(Collections.emptyList()))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(secondUpdateSummaries));
+        setupMocksForUpdate(network, types);
         when(ac.getCloudContext()).thenReturn(cloudContext);
         when(cloudContext.getLocation()).thenReturn(location);
         when(location.getAvailabilityZone()).thenReturn(availabilityZone("az1"));
@@ -432,20 +391,19 @@ class AwsLoadBalancerLaunchServiceTest {
 
     @Test
     void testUpdateCloudformationListenerCreateFailure() {
-        List<CloudResource> instances = createInstances();
-        AwsNetworkView awsNetworkView = createNetworkView(PRIVATE_ID_1, null);
         Network network = createNetwork(PRIVATE_ID_1, null);
         Set<LoadBalancerType> types = Set.of(LoadBalancerType.PRIVATE);
         List<StackResourceSummary> firstUpdateSummaries = createFirstUpdateSummaries(types);
         List<StackResourceSummary> secondUpdateSummaries = createFullSummaries(types);
-        secondUpdateSummaries.get(LIS_INDEX).setResourceStatus(ResourceStatus.CREATE_FAILED);
-
-        setupMocksForUpdate(awsNetworkView, network, instances, Set.of(LoadBalancerType.PRIVATE));
-        when(result.getStackResourceSummaries())
-                .thenReturn(List.of())
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(secondUpdateSummaries);
+        StackResourceSummary stackResourceSummary = secondUpdateSummaries.get(LIS_INDEX).toBuilder().resourceStatus(ResourceStatus.CREATE_FAILED).build();
+        secondUpdateSummaries.remove(LIS_INDEX);
+        secondUpdateSummaries.add(stackResourceSummary);
+        when(cfClient.listStackResources(any()))
+                .thenReturn(createListStackResourcesResponse(Collections.emptyList()))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(secondUpdateSummaries));
+        setupMocksForUpdate(network, Set.of(LoadBalancerType.PRIVATE));
         when(ac.getCloudContext()).thenReturn(cloudContext);
         when(cloudContext.getLocation()).thenReturn(location);
         when(location.getAvailabilityZone()).thenReturn(availabilityZone("az1"));
@@ -462,20 +420,20 @@ class AwsLoadBalancerLaunchServiceTest {
 
     @Test
     void testUpdateCloudformationTargetGroupCreateFailure() {
-        List<CloudResource> instances = createInstances();
-        AwsNetworkView awsNetworkView = createNetworkView(PRIVATE_ID_1, null);
         Network network = createNetwork(PRIVATE_ID_1, null);
         Set<LoadBalancerType> types = Set.of(LoadBalancerType.PRIVATE);
         List<StackResourceSummary> firstUpdateSummaries = createFirstUpdateSummaries(types);
         List<StackResourceSummary> secondUpdateSummaries = createFullSummaries(types);
-        secondUpdateSummaries.get(TG_INDEX).setResourceStatus(ResourceStatus.CREATE_FAILED);
+        StackResourceSummary stackResourceSummary = secondUpdateSummaries.get(TG_INDEX).toBuilder().resourceStatus(ResourceStatus.CREATE_FAILED).build();
+        secondUpdateSummaries.remove(TG_INDEX);
+        secondUpdateSummaries.add(stackResourceSummary);
 
-        setupMocksForUpdate(awsNetworkView, network, instances, Set.of(LoadBalancerType.PRIVATE));
-        when(result.getStackResourceSummaries())
-                .thenReturn(List.of())
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(firstUpdateSummaries)
-                .thenReturn(secondUpdateSummaries);
+        when(cfClient.listStackResources(any()))
+                .thenReturn(createListStackResourcesResponse(Collections.emptyList()))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(firstUpdateSummaries))
+                .thenReturn(createListStackResourcesResponse(secondUpdateSummaries));
+        setupMocksForUpdate(network, Set.of(LoadBalancerType.PRIVATE));
         when(ac.getCloudContext()).thenReturn(cloudContext);
         when(cloudContext.getLocation()).thenReturn(location);
         when(location.getAvailabilityZone()).thenReturn(availabilityZone("az1"));
@@ -494,8 +452,8 @@ class AwsLoadBalancerLaunchServiceTest {
     void testCheckForLoadBalancerAndTargetGroupResourcesExistingResources() {
         List<AwsLoadBalancer> loadBalancers = setupAwsLoadBalancers();
 
-        when(result.getStackResourceSummaries()).thenReturn(createFirstUpdateSummaries(Set.of(LoadBalancerType.PUBLIC, LoadBalancerType.PRIVATE)));
-        when(cfClient.listStackResources(any())).thenReturn(result);
+        when(cfClient.listStackResources(any()))
+                .thenReturn(createListStackResourcesResponse(createFirstUpdateSummaries(Set.of(LoadBalancerType.PUBLIC, LoadBalancerType.PRIVATE))));
 
         boolean result = underTest.checkForLoadBalancerAndTargetGroupResources(cfClient, STACK_NAME, loadBalancers);
 
@@ -506,10 +464,11 @@ class AwsLoadBalancerLaunchServiceTest {
     void testCheckForLoadBalancerAndTargetGroupResourcesMissingLoadBalancer() {
         List<AwsLoadBalancer> loadBalancers = setupAwsLoadBalancers();
         List<StackResourceSummary> summaries = createFirstUpdateSummaries(Set.of(LoadBalancerType.PUBLIC, LoadBalancerType.PRIVATE));
-        summaries.get(LB_INDEX).setLogicalResourceId(null);
+        StackResourceSummary stackResourceSummary = summaries.get(LB_INDEX).toBuilder().logicalResourceId(null).build();
+        summaries.remove(LB_INDEX);
+        summaries.add(stackResourceSummary);
 
-        when(result.getStackResourceSummaries()).thenReturn(summaries);
-        when(cfClient.listStackResources(any())).thenReturn(result);
+        when(cfClient.listStackResources(any())).thenReturn(createListStackResourcesResponse(summaries));
 
         boolean result = underTest.checkForLoadBalancerAndTargetGroupResources(cfClient, STACK_NAME, loadBalancers);
 
@@ -520,10 +479,11 @@ class AwsLoadBalancerLaunchServiceTest {
     void testCheckForLoadBalancerAndTargetGroupResourcesMissingTargetGrup() {
         List<AwsLoadBalancer> loadBalancers = setupAwsLoadBalancers();
         List<StackResourceSummary> summaries = createFirstUpdateSummaries(Set.of(LoadBalancerType.PUBLIC, LoadBalancerType.PRIVATE));
-        summaries.get(TG_INDEX).setLogicalResourceId(null);
+        StackResourceSummary stackResourceSummary = summaries.get(TG_INDEX).toBuilder().logicalResourceId(null).build();
+        summaries.remove(TG_INDEX);
+        summaries.add(stackResourceSummary);
 
-        when(result.getStackResourceSummaries()).thenReturn(summaries);
-        when(cfClient.listStackResources(any())).thenReturn(result);
+        when(cfClient.listStackResources(any())).thenReturn(createListStackResourcesResponse(summaries));
 
         boolean result = underTest.checkForLoadBalancerAndTargetGroupResources(cfClient, STACK_NAME, loadBalancers);
 
@@ -534,8 +494,8 @@ class AwsLoadBalancerLaunchServiceTest {
     void testCheckForListenerResourcesExistingResources() {
         List<AwsLoadBalancer> loadBalancers = setupAwsLoadBalancers();
 
-        when(result.getStackResourceSummaries()).thenReturn(createFullSummaries(Set.of(LoadBalancerType.PUBLIC, LoadBalancerType.PRIVATE)));
-        when(cfClient.listStackResources(any())).thenReturn(result);
+        when(cfClient.listStackResources(any()))
+                .thenReturn(createListStackResourcesResponse(createFullSummaries(Set.of(LoadBalancerType.PUBLIC, LoadBalancerType.PRIVATE))));
 
         boolean result = underTest.checkForListenerResources(cfClient, STACK_NAME, loadBalancers);
 
@@ -546,39 +506,25 @@ class AwsLoadBalancerLaunchServiceTest {
     void testCheckForListenerResourcesMissingListener() {
         List<AwsLoadBalancer> loadBalancers = setupAwsLoadBalancers();
         List<StackResourceSummary> summaries = createFullSummaries(Set.of(LoadBalancerType.PUBLIC, LoadBalancerType.PRIVATE));
-        summaries.get(LIS_INDEX).setLogicalResourceId(null);
+        StackResourceSummary stackResourceSummary = summaries.get(LIS_INDEX).toBuilder().logicalResourceId(null).build();
+        summaries.remove(LIS_INDEX);
+        summaries.add(stackResourceSummary);
 
-        when(result.getStackResourceSummaries()).thenReturn(summaries);
-        when(cfClient.listStackResources(any())).thenReturn(result);
+        when(cfClient.listStackResources(any())).thenReturn(createListStackResourcesResponse(summaries));
 
         boolean result = underTest.checkForListenerResources(cfClient, STACK_NAME, loadBalancers);
 
         assertFalse(result);
     }
 
-    private AwsNetworkView createNetworkView(String subnetId, String endpointGatewaSubnetId) {
-        return new AwsNetworkView(createNetwork(subnetId, endpointGatewaSubnetId));
-    }
-
-    private Network createNetwork(String subnetId, String endpointGatewaSubnetId) {
+    private Network createNetwork(String subnetId, String endpointGatewaySubnetId) {
         Map<String, Object> params = new HashMap<>();
         params.put(SUBNET_ID, subnetId);
         params.put(VPC_ID, VPC_ID);
-        if (StringUtils.isNotEmpty(endpointGatewaSubnetId)) {
-            params.put(ENDPOINT_GATEWAY_SUBNET_ID, endpointGatewaSubnetId);
+        if (StringUtils.isNotEmpty(endpointGatewaySubnetId)) {
+            params.put(ENDPOINT_GATEWAY_SUBNET_ID, endpointGatewaySubnetId);
         }
         return new Network(new Subnet(CIDR), params);
-    }
-
-    private List<CloudResource> createInstances() {
-        return List.of(CloudResource.builder()
-                .withName(INSTANCE_NAME)
-                .withInstanceId(INSTANCE_ID)
-                .withType(AWS_INSTANCE)
-                .withStatus(CREATED)
-                .withParameters(Map.of())
-                .withGroup(INSTANCE_NAME)
-                .build());
     }
 
     private CloudLoadBalancer createCloudLoadBalancer(LoadBalancerType type) {
@@ -603,28 +549,31 @@ class AwsLoadBalancerLaunchServiceTest {
             AwsLoadBalancerScheme scheme = LoadBalancerType.PRIVATE.equals(type) ?
                     AwsLoadBalancerScheme.INTERNAL : AwsLoadBalancerScheme.INTERNET_FACING;
             if (createLbAndTg) {
-                StackResourceSummary tgSummary = new StackResourceSummary();
-                tgSummary.setLogicalResourceId(AwsTargetGroup.getTargetGroupName(PORT, scheme));
-                tgSummary.setPhysicalResourceId(TARGET_GROUP_ARN);
-                tgSummary.setResourceStatus(ResourceStatus.CREATE_COMPLETE);
+                StackResourceSummary tgSummary = StackResourceSummary.builder()
+                        .logicalResourceId(AwsTargetGroup.getTargetGroupName(PORT, scheme))
+                        .physicalResourceId(TARGET_GROUP_ARN)
+                        .resourceStatus(ResourceStatus.CREATE_COMPLETE)
+                        .build();
                 summaries.add(tgSummary);
-                StackResourceSummary lbSummary = new StackResourceSummary();
-                lbSummary.setLogicalResourceId(AwsLoadBalancer.getLoadBalancerName(scheme));
-                lbSummary.setPhysicalResourceId(LOAD_BALANCER_ARN);
-                lbSummary.setResourceStatus(ResourceStatus.CREATE_COMPLETE);
+                StackResourceSummary lbSummary = StackResourceSummary.builder()
+                        .logicalResourceId(AwsLoadBalancer.getLoadBalancerName(scheme))
+                        .physicalResourceId(LOAD_BALANCER_ARN)
+                        .resourceStatus(ResourceStatus.CREATE_COMPLETE)
+                        .build();
                 summaries.add(lbSummary);
             }
             if (creatListeners) {
-                StackResourceSummary lSummary = new StackResourceSummary();
-                lSummary.setLogicalResourceId(AwsListener.getListenerName(PORT, scheme));
-                lSummary.setResourceStatus(ResourceStatus.CREATE_COMPLETE);
+                StackResourceSummary lSummary =  StackResourceSummary.builder()
+                        .logicalResourceId(AwsListener.getListenerName(PORT, scheme))
+                        .resourceStatus(ResourceStatus.CREATE_COMPLETE)
+                        .build();
                 summaries.add(lSummary);
             }
         }
         return summaries;
     }
 
-    private void setupMocksForUpdate(AwsNetworkView awsNetworkView, Network network, List<CloudResource> instances, Set<LoadBalancerType> types) {
+    private void setupMocksForUpdate(Network network, Set<LoadBalancerType> types) {
         List<CloudLoadBalancer> loadBalancers = new ArrayList<>();
         List<AwsLoadBalancer> awsLoadBalancers = new ArrayList<>();
         for (LoadBalancerType type : types) {
@@ -640,11 +589,9 @@ class AwsLoadBalancerLaunchServiceTest {
         when(cfStackUtil.getCfStackName(any())).thenReturn(STACK_NAME);
         when(awsClient.createCloudFormationClient(any(), anyString())).thenReturn(cfClient);
         when(cfClient.updateStack(any())).thenReturn(null);
-        when(cfClient.listStackResources(any())).thenReturn(result);
         when(cloudFormationTemplateBuilder.build(any(ModelContext.class))).thenReturn("{}");
         when(awsStackRequestHelper.createUpdateStackRequest(any(), any(), anyString(), anyString())).thenReturn(null);
         when(cfClient.waiters()).thenReturn(waiters);
-        when(waiters.stackUpdateComplete()).thenReturn(updateWaiter);
         when(ac.getCloudContext()).thenReturn(cloudContext);
         when(cloudContext.getId()).thenReturn(1L);
         when(cloudContext.getLocation()).thenReturn(location);
